# celery-routing

./: .gitignore  README.md  main.py  pyproject.toml
celery_routing/: __init__.py  queue.py  tasks.py
celery_routing/elasticsearch/: tasks.py
tests/: test_celery_routing.py
