[tool.poetry]
name = "celery-routing"
version = "0.1.0"
description = ""
authors = ["Misha Behersky <bmwant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
celery = "=4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
