[tool.poetry]
name = "celery-routing"
version = "0.1.0"
description = "Demo Celery routing"
authors = ["Misha Behersky <bmwant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
celery = "=4.2.1"
redis = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pathlib2 = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
